refac: fix footer svg color and alignment

--- a/style.css
+++ b/style.css
@@ -145,8 +145,11 @@ footer{
     padding: 0 40px;
     font-size: 16px
 }
-
+.footer-logo{
+    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(279deg) brightness(102%) contrast(101%);;
+}
 footer > div{
+    margin-top: 20px;
     flex: 20%;
 }
 .footer-contact-mini{
